--- a/renderer/index.html
+++ b/renderer/index.html
@@ -200,11 +200,119 @@
       .summary-pane {
         background: #f8fafc;
         border-left: 1px solid #e5e7eb;
-        padding: 12px;
-        overflow-y: auto; /* Enable independent scrolling */
-        height: 100vh; /* Fill height */
+        height: 100vh;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        padding: 0; /* Padding moved to inner containers */
       }
+      .summary-scroll-content {
+        flex: 1;
+        overflow-y: auto;
+        padding: 12px;
+      }
+      .summary-footer {
+        padding: 12px;
+        background: #fff;
+        border-top: 1px solid #e5e7eb;
+        flex-shrink: 0;
+      }
+      .chat-input-container {
+        border: 1px solid #e5e7eb;
+        border-radius: 12px;
+        background: #f8fafc;
+        padding: 10px;
+        position: relative;
+        transition: border-color 0.2s, box-shadow 0.2s;
+      }
+      .chat-input-container:focus-within {
+        border-color: #3b82f6;
+        box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+        background: #fff;
+      }
+      .chat-textarea {
+        width: 100%;
+        border: none;
+        background: transparent;
+        font-family: inherit;
+        font-size: 12px; /* Match summary content size */
+        line-height: 1.5;
+        resize: none;
+        outline: none;
+        min-height: 24px;
+        max-height: 200px;
+        padding-right: 36px;
+        display: block;
+      }
+      .chat-send-btn {
+        position: absolute;
+        bottom: 8px;
+        right: 8px;
+        width: 28px;
+        height: 28px;
+        border-radius: 50%;
+        background: #3b82f6;
+        color: #fff;
+        border: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition: background 0.15s;
+        padding: 0;
+      }
+      .chat-send-btn:hover { background: #2563eb; }
+      .chat-send-btn:disabled { background: #cbd5e1; cursor: not-allowed; }
+      .chat-controls {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        margin-top: 8px;
+      }
+      .control-btn {
+        display: flex;
+        align-items: center;
+        gap: 6px;
+        padding: 6px 10px;
+        border: 1px solid #e5e7eb;
+        border-radius: 8px;
+        background: #fff;
+        font-size: 12px;
+        font-weight: 500;
+        color: #475569;
+        cursor: pointer;
+        transition: all 0.15s;
+      }
+      .control-btn:hover { background: #f8fafc; border-color: #cbd5e1; }
+      .model-dropdown {
+        position: absolute;
+        bottom: 100%;
+        left: 0;
+        margin-bottom: 8px;
+        background: #fff;
+        border: 1px solid #e5e7eb;
+        border-radius: 8px;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+        display: none;
+        flex-direction: column;
+        min-width: 140px;
+        width: max-content; /* Auto width */
+        z-index: 20;
+        overflow: hidden;
+      }
+      .model-dropdown.show { display: flex; }
+      .model-option {
+        padding: 8px 12px;
+        font-size: 12px; /* Fix to 12px */
+        color: #1e293b;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        white-space: nowrap; /* Prevent wrap */
+      }
+      .model-option:hover { background: #f1f5f9; }
+      .model-option.selected { color: #2563eb; font-weight: 600; background: #eff6ff; }
       .summary-header {
         display: flex;
         align-items: center;
@@ -304,50 +412,56 @@
       }
       .ask-output {
         margin-top: 10px;
+        /* Padding handled by inner messages */
+      }
+      .ask-output.muted {
         padding: 12px;
         border: 1px solid #e5e7eb;
         border-radius: 10px;
-        background: #f8fafc;
-        color: #111827;
-        white-space: pre-wrap;
-        line-height: 1.5;
-      }
-      .ask-output .label {
-        display: block;
-        font-weight: 700;
-        margin-bottom: 6px;
-        color: #1f2937;
-      }
-      .ask-output.muted {
-        color: #6b7280;
-        border-style: dashed;
         background: #fff;
+        color: #4b5563;
+        font-weight: 500;
+        font-size: 12px;
+      }
+      .chat-item {
+        margin-bottom: 16px;
+        border-bottom: 1px solid #f1f5f9;
+        padding-bottom: 16px;
+      }
+      .chat-item:last-child {
+        border-bottom: none;
+        margin-bottom: 0;
+        padding-bottom: 0;
+      }
+      .chat-q {
+        font-weight: 600;
+        color: #1e293b;
+        margin-bottom: 6px;
+        display: flex;
+        gap: 6px;
+      }
+      .chat-q::before {
+        content: 'Q.';
+        color: #3b82f6;
+      }
+      .chat-a {
+        color: #334155;
+        line-height: 1.6;
+        padding-left: 20px;
       }
       #brief-list {
         list-style: none;
         padding-left: 0;
         margin: 0;
       }
-      .info-text {
-        color: #4b5563;
+      .summary-card .info-text,
+      .summary-card .info-text li,
+      .summary-card .info-text p,
+      .summary-card .info-text div {
+        color: #4b5563 !important;
         font-size: 12px;
         font-weight: 500;
         line-height: 1.5;
-      }
-      .summary-card .info-text li {
-        color: #4b5563;
-        font-size: 12px;
-        font-weight: 500;
-        line-height: 1.5;
-        margin: 0;
-        padding: 0;
-      }
-      .summary-card p.info-text {
-        color: #4b5563;
-        font-size: 12px;
-        font-weight: 500;
-        line-height: 1.5;
-        margin: 0;
       }
       .summary-card .info-text.placeholder {
         text-align: center;
@@ -395,35 +509,7 @@
         cursor: default;
         position: relative;
       }
-      .keyword-chip::after {
-        content: attr(data-desc);
-        position: absolute;
-        left: 50%;
-        top: 110%;
-        transform: translateX(-50%) translateY(4px);
-        background: #0f172a;
-        color: #f8fafc;
-        padding: 10px 12px;
-        border-radius: 12px;
-        font-size: 11px;
-        line-height: 1.5;
-        min-width: 320px;
-        max-width: 520px;
-        max-height: 260px;
-        overflow: auto;
-        white-space: normal;
-        box-shadow: 0 18px 36px rgba(0,0,0,0.32);
-        opacity: 0;
-        pointer-events: none;
-        transition: opacity 0.14s ease, transform 0.14s ease;
-        z-index: 6;
-      }
-      .keyword-chip:hover::after,
-      .keyword-chip:focus-visible::after,
-      .keyword-chip.active::after {
-        opacity: 1;
-        transform: translateX(-50%) translateY(0);
-      }
+      /* Removed CSS-only tooltip styles */
       .openai-chip {
         display: inline-flex;
         align-items: center;
@@ -518,10 +604,32 @@
         transition: opacity 0.2s, transform 0.2s;
         z-index: 100;
         box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        white-space: nowrap; /* Prevent line break */
       }
       .floating-toast.show {
         opacity: 1;
         transform: translateY(0);
+      }
+      /* Portal Tooltip */
+      #tooltip-portal {
+        position: fixed;
+        background: #0f172a;
+        color: #f8fafc;
+        padding: 10px 12px;
+        border-radius: 12px;
+        font-size: 11px;
+        line-height: 1.5;
+        max-width: 320px;
+        box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+        pointer-events: none;
+        opacity: 0;
+        transition: opacity 0.15s;
+        z-index: 9999;
+        display: none;
+      }
+      #tooltip-portal.show {
+        display: block;
+        opacity: 1;
       }
     </style>
   </head>
@@ -559,64 +667,104 @@
       <div class="col-resizer" id="resizer-right"></div>
 
       <section class="summary-pane">
-        <div style="display:flex; align-items:center; justify-content:flex-end; gap:8px; margin-bottom:12px;">
-          <div class="alert-pill" id="alert-pill"><span class="alert-dot"></span><span id="alert-text">OK</span></div>
-          <div class="openai-chip" id="openai-chip">
-            <span class="status-dot" id="openai-dot"></span>
-            <span id="openai-chip-text">Checking</span>
+        <div class="summary-scroll-content">
+          <div style="display:flex; align-items:center; justify-content:flex-end; gap:8px; margin-bottom:12px;">
+            <div class="alert-pill" id="alert-pill"><span class="alert-dot"></span><span id="alert-text">OK</span></div>
+            
+            <!-- Global Model Selector -->
+            <div style="position:relative;">
+              <div class="openai-chip" id="model-selector" style="cursor:pointer;">
+                <img src="../src/openai.png" alt="openai" width="12" height="12" />
+                <span id="current-model-name">gpt-5.1-codex</span>
+                <span style="font-size:10px; margin-left:2px;">▼</span>
+              </div>
+              <div class="model-dropdown" id="model-dropdown" style="top:100%; bottom:auto; right:0; left:auto; margin-top:4px;">
+                <div class="model-option selected" data-model="gpt-5.1-codex">gpt-5.1-codex</div>
+                <div class="model-option" data-model="gpt-5.2">gpt-5.2</div>
+                <div class="model-option" data-model="gpt-5.2-codex">gpt-5.2-codex</div>
+                <div class="model-option" data-model="gpt-5.1-codex-max">gpt-5.1-codex-max</div>
+                <div class="model-option" data-model="gpt-5.1-codex-mini">gpt-5.1-codex-mini</div>
+              </div>
+            </div>
+
+            <div class="openai-chip" id="openai-chip">
+              <span class="status-dot" id="openai-dot"></span>
+              <span id="openai-chip-text">Checking</span>
+            </div>
+          </div>
+
+          <div class="summary-card" id="card-keywords">
+            <h4>
+              키워드
+              <span class="section-actions">
+                <button class="section-btn" title="프롬프트 위치: src/llm/prompts.json" data-section="keywords" data-action="settings"><img src="../src/settings.png" alt="settings" width="13" height="13" /></button>
+                <button class="section-btn" title="복사" data-section="keywords" data-action="copy"><img src="../src/copy.png" alt="copy" width="12" height="12" /></button>
+                <button class="section-btn" title="다시 생성" data-section="keywords" data-action="regen"><img src="../src/regenerate.png" alt="regenerate" width="12" height="12" /></button>
+              </span>
+            </h4>
+            <div id="keywords-body" class="muted info-text"></div>
+          </div>
+
+          <div class="summary-card" id="card-brief">
+            <h4>
+              3줄 요약
+              <span class="section-actions">
+                <button class="section-btn" title="프롬프트 위치: src/llm/prompts.json" data-section="brief" data-action="settings"><img src="../src/settings.png" alt="settings" width="13" height="13" /></button>
+                <button class="section-btn" title="복사" data-section="brief" data-action="copy"><img src="../src/copy.png" alt="copy" width="12" height="12" /></button>
+                <button class="section-btn" title="다시 생성" data-section="brief" data-action="regen"><img src="../src/regenerate.png" alt="regenerate" width="12" height="12" /></button>
+              </span>
+            </h4>
+            <ol id="brief-list" class="muted info-text"></ol>
+          </div>
+
+          <div class="summary-card" id="card-summary">
+            <h4>
+              요약
+              <span class="section-actions">
+                <button class="section-btn" title="프롬프트 위치: src/llm/prompts.json" data-section="summary" data-action="settings"><img src="../src/settings.png" alt="settings" width="13" height="13" /></button>
+                <button class="section-btn" title="복사" data-section="summary" data-action="copy"><img src="../src/copy.png" alt="copy" width="12" height="12" /></button>
+                <button class="section-btn" title="다시 생성" data-section="summary" data-action="regen"><img src="../src/regenerate.png" alt="regenerate" width="12" height="12" /></button>
+              </span>
+            </h4>
+            <div id="summary-body" class="muted info-text"></div>
+          </div>
+          
+          <div class="summary-card" id="card-chat">
+            <h4>
+              Chat
+              <span class="section-actions">
+                <button class="section-btn" title="복사" data-section="chat" data-action="copy"><img src="../src/copy.png" alt="copy" width="12" height="12" /></button>
+                <button class="section-btn" title="대화 지우기" data-section="chat" data-action="clear"><img src="../src/recycle-bin.png" alt="clear" width="13" height="13" /></button>
+              </span>
+            </h4>
+            <div id="chat-history" class="muted info-text" style="display:none;">
+              <!-- Chat content goes here -->
+            </div>
+            <div id="chat-empty" class="info-text placeholder">아직 질문이 없습니다.</div>
           </div>
         </div>
 
-        <div class="summary-card" id="card-keywords">
-          <h4>
-            키워드
-            <span class="section-actions">
-              <button class="section-btn" title="프롬프트 위치: src/llm/prompts.json" data-section="keywords" data-action="settings"><img src="../src/settings.png" alt="settings" width="13" height="13" /></button>
-              <button class="section-btn" title="복사" data-section="keywords" data-action="copy"><img src="../src/copy.png" alt="copy" width="12" height="12" /></button>
-              <button class="section-btn" title="다시 생성" data-section="keywords" data-action="regen"><img src="../src/regenerate.png" alt="regenerate" width="12" height="12" /></button>
-            </span>
-          </h4>
-          <div id="keywords-body" class="muted info-text"></div>
-        </div>
-
-        <div class="summary-card" id="card-brief">
-          <h4>
-            3줄 요약
-            <span class="section-actions">
-              <button class="section-btn" title="프롬프트 위치: src/llm/prompts.json" data-section="brief" data-action="settings"><img src="../src/settings.png" alt="settings" width="13" height="13" /></button>
-              <button class="section-btn" title="복사" data-section="brief" data-action="copy"><img src="../src/copy.png" alt="copy" width="12" height="12" /></button>
-              <button class="section-btn" title="다시 생성" data-section="brief" data-action="regen"><img src="../src/regenerate.png" alt="regenerate" width="12" height="12" /></button>
-            </span>
-          </h4>
-          <ol id="brief-list" class="muted info-text"></ol>
-        </div>
-
-        <div class="summary-card" id="card-summary">
-          <h4>
-            요약
-            <span class="section-actions">
-              <button class="section-btn" title="프롬프트 위치: src/llm/prompts.json" data-section="summary" data-action="settings"><img src="../src/settings.png" alt="settings" width="13" height="13" /></button>
-              <button class="section-btn" title="복사" data-section="summary" data-action="copy"><img src="../src/copy.png" alt="copy" width="12" height="12" /></button>
-              <button class="section-btn" title="다시 생성" data-section="summary" data-action="regen"><img src="../src/regenerate.png" alt="regenerate" width="12" height="12" /></button>
-            </span>
-          </h4>
-          <div id="summary-body" class="muted info-text"></div>
-        </div>
-
-        <div class="summary-card">
-          <div class="ask-row">
-            <input id="ask-input" placeholder="무엇이든 질문하세요." />
-            <button id="ask-btn">질문</button>
+        <div class="summary-footer">
+          <div class="chat-input-container">
+            <textarea id="ask-input" class="chat-textarea" placeholder="이 논문에 대해 궁금한 점을 물어보세요..." rows="1"></textarea>
+            <button id="ask-btn" class="chat-send-btn">
+              <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                <line x1="12" y1="19" x2="12" y2="5"></line>
+                <polyline points="5 12 12 5 19 12"></polyline>
+              </svg>
+            </button>
           </div>
-          <div id="ask-output" class="ask-output muted">아직 질문이 없습니다.</div>
-          <div class="cta-row" style="margin-top:10px;">
-            <div class="cta">Add Reference</div>
-            <div class="cta">Gemini 2.5 Flash Live</div>
+          <div class="chat-controls">
+            <!--
+            <button class="control-btn" title="Not implemented yet">
+              <img src="../src/clip.png" alt="clip" width="14" height="14" /> Add Reference
+            </button>
+            -->
           </div>
         </div>
-
       </section>
     </div>
+    <div id="tooltip-portal"></div>
     <script type="module" src="./renderer.js"></script>
   </body>
 </html>
