fix: refactor document data storage, fixed indent of info sections

--- a/renderer/index.html
+++ b/renderer/index.html
@@ -914,17 +914,12 @@
       .summary-card h4 { font-size: 14px; font-weight: 700; margin: 10px 0 6px; line-height: 1.3; }
       .summary-card h5 { font-size: 13px; font-weight: 700; margin: 9px 0 4px; line-height: 1.28; color: var(--text-heading); }
       .summary-card h6 { font-size: 12px; font-weight: 700; margin: 6px 0 4px; line-height: 1.26; color: var(--text-heading); }
-      .summary-card ol {
-        margin: 0 0 8px 16px;
+      .summary-card ol, .summary-card ul {
+        margin: 0 0 8px 0;
+        padding-left: 20px;
         color: var(--text-body);
         font-size: 12px;
-        line-height: 1.5;
-      }
-      .summary-card ul {
-        margin: 0 0 8px 16px;
-        color: var(--text-body);
-        font-size: 12px;
-        line-height: 1.5;
+        line-height: 1.6;
       }
       .summary-card div {
         color: var(--text-body);
